Actividades/HW_1/HW_1/x64/Debug/HW_1.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\Sebas\Documents\code\ParaleloAvanzado\AdvancedParallelProgramming\HW_1\HW_1>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\Sebas\Documents\code\ParaleloAvanzado\AdvancedParallelProgramming\HW_1\HW_1\x64\Debug\kernel.cu.obj "C:\Users\Sebas\Documents\code\ParaleloAvanzado\AdvancedParallelProgramming\HW_1\HW_1\kernel.cu" 
C:\Users\Sebas\Documents\code\ParaleloAvanzado\AdvancedParallelProgramming\HW_1\HW_1\kernel.cu(24): error : too few arguments in function call
        unique_gid_calculation << < 2, 8, 2 >> > ();
                                                  ^
  
  1 error detected in the compilation of "C:/Users/Sebas/Documents/code/ParaleloAvanzado/AdvancedParallelProgramming/HW_1/HW_1/kernel.cu".
  kernel.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.3.targets(799,9): error MSB3721: El comando ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"  -G   --keep-dir x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\Sebas\Documents\code\ParaleloAvanzado\AdvancedParallelProgramming\HW_1\HW_1\x64\Debug\kernel.cu.obj "C:\Users\Sebas\Documents\code\ParaleloAvanzado\AdvancedParallelProgramming\HW_1\HW_1\kernel.cu"" salió con el código 2.
